# aura

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENT-TRIGGER-PROMPTS.md  ARCHITECTURE-AUDIT-REPORT.md  ARCHITECTURE-REVIEW-v4.md  ARCHITECTURE.md  AUDIT-2b-cognitive-architecture.md  AUDIT-REPORT.md  AURA-TRANSFORMATION-COORDINATION-PLAN.md  AURA-V4-CONCEPT-DESIGN-AND-GROWTH-ARCHITECTURE.md  AURA-V4-MASTER-PLAN.md  BATCH-3-REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE-AUDIT-REPORT.md  CONTRIBUTING.md  Cargo.toml  DEEP-5-SEQUENTIAL-MEETINGS.md  DEEP-SEQUENTIAL-ANALYSIS-AURA-VISION.md  DEPLOYMENT-GUIDE.md  DEVICE-COMPATIBILITY-REPORT.json  DEVICE-FULL-CODEBASE-TEST.md  DEVICE-TESTING-GUIDE.md  ENTERPRISE-TRANSFORMATION-SYNTHESIS.md  ENVIRONMENT-VARIABLES.md  FINAL-TRANSFORMATION-REPORT.md  FOUNDER-DESK-REPORT.md  FULL-ENTERPRISE-AUDIT-SYNTHESIS.md  ISSUE-LOG.md  LICENSE  MCP-BROWSERSTACK-TOOLS.md  MEMORY-NEOCORTEX-SIGSEGV.md  Makefile  PERSONA-SIMULATION-FULL-REPORT.md  PRODUCTION-AUDIT-REPORT.md  README.md  RESEARCH_REPORT.md  SECURITY.md  (+36 more)
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
android/: build.gradle.kts  settings.gradle.kts
artifacts-fixed/: aura-neocortex
audit/: AURA-v4-MASTER-AUDIT.md  COURTROOM-GAP-VERDICTS.md  DOMAIN-03-SECURITY.md  DOMAIN-06-ANDROID.md  MASTER-AUDIT-REPORT.md  OPERATIONAL-READINESS-AUDIT.json  TASK-1.txt  TASK-2.txt  TEST_AUDIT_FINAL.md  agent3-extracted-findings.md  agent4-extracted-findings.md  persona3_maya_adversarial_report.json
audits/: panel-3-verdict.md
aura-appium-test/: browserstack.yml  pom.xml
aura-node-test/: package-lock.json  package.json  test-local.js
checkpoints/: 2c-part1-screen-module.md  2c-part2-execution-engine.md  2e-p2a-memory-subsystem.md  2e-p2b-neocortex-llm.md  2e-part1-platform-telemetry.md  2h-p1a-social-domain.md  2h-p1b-health-domain.md  2h-p1b-learning-domain.md  2h-p1b-social-domain.md  (+8 more)
crates/aura-daemon/: Cargo.toml
crates/aura-daemon/src/: integration_tests.rs  lib.rs  outcome_bus.rs  policy_ethics_integration_tests.rs  reaction.rs
crates/aura-daemon/src/arc/: app_catalog.rs  cron.rs  mod.rs  routines.rs
crates/aura-daemon/src/arc/health/: fitness.rs  medication.rs  mod.rs  sleep.rs  vitals.rs
crates/aura-daemon/src/arc/learning/: dimensions.rs  dreaming.rs  hebbian.rs  interests.rs  mod.rs  patterns.rs  prediction.rs  skills.rs  world_model.rs
crates/aura-daemon/src/arc/life_arc/: financial.rs  growth.rs  health_arc.rs  mod.rs  primitives.rs  relationships.rs
crates/aura-daemon/src/arc/proactive/: attention.rs  mod.rs  morning.rs  routines.rs  suggestions.rs  welcome.rs
crates/aura-daemon/src/arc/social/: birthday.rs  contacts.rs  gap.rs  graph.rs  health.rs  importance.rs  mod.rs
crates/aura-daemon/src/bridge/: mod.rs  router.rs  system_api.rs  telegram_bridge.rs  voice_bridge.rs
crates/aura-daemon/src/daemon_core/: accelerator.rs  calibration.rs  channels.rs  checkpoint.rs  main_loop.rs  mod.rs  onboarding.rs  proactive_dispatcher.rs  react.rs  shutdown.rs  startup.rs  token_budget.rs  tutorial.rs
crates/aura-daemon/src/execution/: cycle.rs  etg.rs  executor.rs  mod.rs  monitor.rs  planner.rs  react.rs  retry.rs  tools.rs
crates/aura-daemon/src/execution/learning/: mod.rs  workflows.rs
crates/aura-daemon/src/extensions/: discovery.rs  loader.rs  mod.rs  recipe.rs  sandbox.rs
crates/aura-daemon/src/goals/: conflicts.rs  decomposer.rs  mod.rs  registry.rs  scheduler.rs  tracker.rs
crates/aura-daemon/src/health/: mod.rs  monitor.rs
crates/aura-daemon/src/identity/: affective.rs  anti_sycophancy.rs  behavior_modifiers.rs  epistemic.rs  ethics.rs  mod.rs  personality.rs  proactive_consent.rs  prompt_personality.rs  relationship.rs  thinking_partner.rs  user_profile.rs
crates/aura-daemon/src/ipc/: client.rs  mod.rs  protocol.rs  spawn.rs
crates/aura-daemon/src/memory/: archive.rs  compaction.rs  consolidation.rs  embeddings.rs  episodic.rs  export.rs  feedback.rs  hnsw.rs  importance.rs  mod.rs  patterns.rs  semantic.rs  workflows.rs  working.rs
crates/aura-daemon/src/persistence/: integrity.rs  journal.rs  mod.rs  safe_mode.rs  vault.rs
crates/aura-daemon/src/pipeline/: amygdala.rs  contextor.rs  entity.rs  mod.rs  parser.rs  slots.rs
crates/aura-daemon/src/platform/: battery.rs  connectivity.rs  cpu.rs  detect.rs  doze.rs  jni_bridge.rs  mod.rs  notifications.rs  path_resolver.rs  permissions.rs  power.rs  sensors.rs  thermal.rs
crates/aura-daemon/src/policy/: audit.rs  boundaries.rs  emergency.rs  gate.rs  mod.rs  rules.rs  sandbox.rs  wiring.rs
crates/aura-daemon/src/routing/: classifier.rs  mod.rs  system1.rs  system2.rs
crates/aura-daemon/src/screen/: actions.rs  anti_bot.rs  cache.rs  mod.rs  reader.rs  selector.rs  semantic.rs  tree.rs  verifier.rs
crates/aura-daemon/src/telegram/: approval.rs  audit.rs  commands.rs  curl_backend.rs  dashboard.rs  dialogue.rs  mod.rs  polling.rs  queue.rs  reqwest_backend.rs  security.rs  voice_handler.rs  voice_pipeline.rs
crates/aura-daemon/src/telegram/handlers/: agency.rs  ai.rs  config.rs  debug.rs  memory.rs  mod.rs  security.rs  system.rs
crates/aura-daemon/src/telemetry/: counters.rs  mod.rs  ring.rs
crates/aura-daemon/src/voice/: audio_io.rs  biomarkers.rs  call_handler.rs  mod.rs  modality_state_machine.rs  personality_voice.rs  signal_processing.rs  stt.rs  tts.rs  vad.rs  wake_word.rs
crates/aura-iron-laws/: Cargo.toml  README.md
crates/aura-iron-laws/src/: lib.rs
crates/aura-llama-sys/: Cargo.toml  build.rs
crates/aura-llama-sys/src/: gguf_meta.rs  lib.rs  server_http_backend.rs
crates/aura-neocortex/: Cargo.toml
crates/aura-neocortex/src/: aura_config.rs  context.rs  grammar.rs  inference.rs  ipc_handler.rs  main.rs  model.rs  model_capabilities.rs  prompts.rs  tool_format.rs
crates/aura-types/: Cargo.toml
crates/aura-types/src/: actions.rs  config.rs  dsl.rs  errors.rs  etg.rs  events.rs  extensions.rs  goals.rs  identity.rs  ipc.rs  lib.rs  manifest.rs  memory.rs  outcome.rs  power.rs  screen.rs  tools.rs
(+302 files in other folders)
