[package]
name = "aura-daemon"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
stub  = []
voice = ["dep:audiopus"]

[dependencies]
aura-types = { path = "../aura-types" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
lz4 = { workspace = true }
zstd = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }
ogg = "0.9"
audiopus = { version = "=0.3.0-rc.0", optional = true }
aes-gcm = "0.10"
sha2 = "0.10"
argon2 = "0.5"
rand = { version = "0.8", features = ["getrandom"] }
zeroize = { version = "1", features = ["derive"] }
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net", "test-util"] }
tempfile = "3"
