[package]
name = "aura-daemon"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "aura-daemon"
path = "src/bin/main.rs"

[features]
stub        = []
voice       = ["dep:audiopus"]
# Use curl subprocess for HTTP (Termux-compatible, no TLS library dependencies)
curl-backend = ["dep:async-trait"]
# Default: use reqwest for HTTP (works on CI/Linux, may panic on Termux)
default     = ["reqwest-backend"]

[dependencies]
aura-types   = { path = "../aura-types" }
serde        = { workspace = true }
serde_json   = { workspace = true }
bincode      = { workspace = true }
tokio        = { workspace = true, features = ["process", "io-util"] }
rusqlite     = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror    = { workspace = true }
toml         = { workspace = true }
lz4          = { workspace = true }
zstd         = { workspace = true }
ogg          = "0.9"
aes-gcm      = "0.10"
sha2         = "0.10"
argon2       = "0.5"
rand         = { version = "0.8", features = ["getrandom"] }
zeroize      = { version = "1", features = ["derive"] }
log          = "0.4"

# reqwest: used when curl-backend feature is NOT enabled.
# CRITICAL: rustls-tls on Termux causes rustls-platform-verifier panic.
# For Termux native builds, use --features curl-backend instead.
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"], optional = true }
async-trait = { workspace = true, optional = true }

# curl: used when curl-backend feature IS enabled. No TLS library deps needed.
# curl uses OpenSSL on Termux (works perfectly), no platform-verifier needed.

audiopus = { version = "=0.3.0-rc.0", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
jni  = "0.21"

[dev-dependencies]
tokio    = { version = "1", features = ["rt", "macros", "sync", "time", "net", "test-util"] }
tempfile = "3"
