[package]
name = "aura-llama-sys"
version.workspace = true
edition.workspace = true
links = "llama"

[dependencies]
libloading = "0.8"
tracing = "0.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[features]
# Build without real llama.cpp (for CI, testing, or host builds).
# When enabled, the native C compilation step is skipped entirely.
stub = []

[build-dependencies]
cc = "1"
