[package]
name = "aura-llama-sys"
version.workspace = true
edition.workspace = true
links = "llama"

[dependencies]
libloading = "0.9"
tracing = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
# Build without real llama.cpp (for CI, testing, or host builds).
# When enabled, the native C compilation step is skipped entirely.
stub = []

[build-dependencies]
cc = "1"
