[package]
name = "aura-neocortex"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aura-neocortex"
path = "src/main.rs"

[features]
stub = ["aura-llama-sys/stub"]

[dependencies]
aura-types = { path = "../aura-types" }
aura-llama-sys = { path = "../aura-llama-sys" }
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
toml.workspace = true
rand = "0.8"
