[package]
name = "aura-types"
version.workspace = true
edition.workspace = true

[features]
stub = []

[dependencies]
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
toml.workspace = true
bitflags = "2"
serde_json.workspace = true
async-trait.workspace = true

[dev-dependencies]
