[package]
name = "aura-types"
version.workspace = true
edition.workspace = true

[features]
stub = []

[dependencies]
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
toml.workspace = true
bitflags = "2"
serde_json.workspace = true
async-trait.workspace = true

[[test]]
name = "test_ffi_safety"
path = "../../tests/security/test_ffi_safety.rs"

[[test]]
name = "test_config"
path = "../../tests/integration/test_config.rs"

[[test]]
name = "test_ipc"
path = "../../tests/integration/test_ipc.rs"
